--- a/index.html
+++ b/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cunha</title>
+  </head>
+
+  <body>
+    <header>
+      <div>
+        <img src="https://jpclow3.github.io/portfolio/Logo.png" alt="Logo" />
+      </div>
+
+      <div>
+        <div>
+          <a href="#"> Enviar Mensagem </a>
+        </div>
+
+        <div>
+          <a href="#"> Baixar CV</a>
+        </div>
+      </div>
+    </header>
+
+    <section>
+      <div>
+        <span>Front-End Desenvolvedor</span>
+      </div>
+
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+
+    <section>
+      <div>
+        <h1>Olá, sou Gabriel</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+          vulputate urna eu venenatis aliquam. Quisque ornare orci id tortor
+          accumsan scelerisque.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+          vulputate urna eu venenatis aliquam. Quisque ornare orci id tortor
+          accumsan scelerisque.
+        </p>
+        <p>
+          Nulla malesuada, dui eget convallis luctus, nibh orci condimentum
+          tortor, cursus fermentum nibh sem non nisi.
+        </p>
+        <p>
+          Nulla malesuada, dui eget convallis luctus, nibh orci condimentum
+          tortor, cursus fermentum nibh sem non nisi.
+        </p>
+      </div>
+      <div><img src="https://jpclow3.github.io/portfolio/profile.jpg" alt="Foto Pessoal"></div>
+    </section>
     
-</body>
+
+    <section>
+      <div><img src="https://mrmelem.github.io/site-portfolio/src/assets/html.svg" alt="HTML5"></div>
+      <div><img src="https://mrmelem.github.io/site-portfolio/src/assets/css.svg" alt="CSS3"></div>
+    </section>
+
+    <footer>
+      <div><p>Site desenvolvido por <b>GABRIEL CUNHA</b></p></div>
+
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </footer>
+  </body>
 </html>
