--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cunha</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -30,10 +34,10 @@
       </div>
 
       <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><i class="fab fa-linkedin"></i></div>
+        <div><i class="fab fa-whatsapp-square"></i></div>
+        <div><i class="fab fa-github-square"></i></div>
+        <div><i class="fab fa-instagram-square"></i></div>
       </div>
     </section>
 
@@ -59,23 +63,39 @@
           tortor, cursus fermentum nibh sem non nisi.
         </p>
       </div>
-      <div><img src="https://jpclow3.github.io/portfolio/profile.jpg" alt="Foto Pessoal"></div>
+      <div>
+        <img
+          src="https://jpclow3.github.io/portfolio/profile.jpg"
+          alt="Foto Pessoal"
+        />
+      </div>
     </section>
-    
 
     <section>
-      <div><img src="https://mrmelem.github.io/site-portfolio/src/assets/html.svg" alt="HTML5"></div>
-      <div><img src="https://mrmelem.github.io/site-portfolio/src/assets/css.svg" alt="CSS3"></div>
+      <div>
+        <img
+          src="https://mrmelem.github.io/site-portfolio/src/assets/html.svg"
+          alt="HTML5"
+        />
+      </div>
+      <div>
+        <img
+          src="https://mrmelem.github.io/site-portfolio/src/assets/css.svg"
+          alt="CSS3"
+        />
+      </div>
     </section>
 
     <footer>
-      <div><p>Site desenvolvido por <b>GABRIEL CUNHA</b></p></div>
+      <div>
+        <p>Site desenvolvido por <b>GABRIEL CUNHA</b></p>
+      </div>
 
       <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><i class="fab fa-linkedin"></i></div>
+        <div><i class="fab fa-whatsapp-square"></i></div>
+        <div><i class="fab fa-github-square"></i></div>
+        <div><i class="fab fa-instagram-square"></i></div>
       </div>
     </footer>
   </body>
