--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -28,12 +29,13 @@
       </div>
     </header>
 
-    <section>
-      <div>
+    <section class="banner">
+      <div id="text"> 
+
         <span>Front-End Desenvolvedor</span>
       </div>
 
-      <div>
+      <div class="icons">
         <div><i class="fab fa-linkedin"></i></div>
         <div><i class="fab fa-whatsapp-square"></i></div>
         <div><i class="fab fa-github-square"></i></div>
@@ -86,12 +88,12 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="addict">
       <div>
         <p>Site desenvolvido por <b>GABRIEL CUNHA</b></p>
       </div>
 
-      <div>
+      <div class="icons">
         <div><i class="fab fa-linkedin"></i></div>
         <div><i class="fab fa-whatsapp-square"></i></div>
         <div><i class="fab fa-github-square"></i></div>
